doc/2.0/_sources/reference/generated/ak.types.Type.rst.txt
ak.types.Type
-------------

.. py:module: ak.types.Type

Defined in `awkward.types.type <https://github.com/scikit-hep/awkward-1.0/blob/21f485b45e31dcd53968a279e47e4df4596a194b/src/awkward/types/type.py>`__ on `line 12 <https://github.com/scikit-hep/awkward-1.0/blob/21f485b45e31dcd53968a279e47e4df4596a194b/src/awkward/types/type.py#L12>`__.

.. py:class:: ak.types.Type(self)



.. _ak-types-type-parameters:

.. py:attribute:: ak.types.Type.parameters



.. _ak-types-type-parameter:

.. py:method:: ak.types.Type.parameter(self, key)



.. _ak-types-type-typestr:

.. py:attribute:: ak.types.Type.typestr



.. _ak-types-type-__str__:

.. py:method:: ak.types.Type.__str__(self)



.. _ak-types-type-show:

.. py:method:: ak.types.Type.show(self, stream=sys.stdout)



.. _ak-types-type-_str_parameters_exclude:

.. py:attribute:: ak.types.Type._str_parameters_exclude
    :value: ('__categorical__',)



.. _ak-types-type-_str_categorical_begin:

.. py:method:: ak.types.Type._str_categorical_begin(self)



.. _ak-types-type-_str_categorical_end:

.. py:method:: ak.types.Type._str_categorical_end(self)



.. _ak-types-type-_str_parameters:

.. py:method:: ak.types.Type._str_parameters(self)



.. _ak-types-type-_repr_args:

.. py:method:: ak.types.Type._repr_args(self)

